// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly has WebGL no devices connected in desktop version 1`] = `
<div>
  <div
    class="button highlighted"
    title="Path Preview"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`should render correctly has WebGL no devices connected in web version 1`] = `
<div>
  <div
    class="button highlighted disabled"
    title="Path Preview"
  >
    <svgr-url />
  </div>
</div>
`;

exports[`should render correctly no WebGL 1`] = `<div />`;
